--- a/.github/workflows/kubernetes-deploy.yml
+++ b/.github/workflows/kubernetes-deploy.yml
@@ -50,4 +50,4 @@ jobs:
           
       - name: Verify deployment
         run: |
-          kubectl --kubeconfig=kubeconfig rollout status deployment/ip-country-lookup -n default --timeout=180s
+          kubectl --kubeconfig=kubeconfig rollout status deployment/ip-country-lookup --timeout=180s
