--- a/app/ip-country-lookup/manifests/deployment.yaml
+++ b/app/ip-country-lookup/manifests/deployment.yaml
@@ -41,18 +41,33 @@ spec:
             - name: http
               containerPort: 8000
               protocol: TCP
+          startupProbe:
+            httpGet:
+              path: /metrics
+              port: http
+            initialDelaySeconds: 10
           livenessProbe:
             httpGet:
               path: /metrics
               port: http
+            # initialDelaySeconds: 10
+            periodSeconds: 3
+            timeoutSeconds: 1
+            failureThreshold: 3
+            successThreshold: 1
           readinessProbe:
             httpGet:
               path: /metrics
               port: http
+            # initialDelaySeconds: 10
+            periodSeconds: 3
+            timeoutSeconds: 1
+            failureThreshold: 3
+            successThreshold: 1
           resources:
             limits:
-              cpu: 100m
-              memory: 200Mi
+              cpu: 150m
+              memory: 300Mi
             requests:
-              cpu: 100m
-              memory: 200Mi
+              cpu: 150m
+              memory: 300Mi
